# mlir-graphblas

./: .clang-format-ignore  .gitignore  .readthedocs.yml  LICENSE  LICENSE.thirdparty  MANIFEST.in  README.md  conftest.py  dev-environment.yml  pyproject.toml  run-clang-format.py  run_tests.sh  setup.cfg  setup.py
.github/workflows/: debug.yml  deploy_and_release.yml  test_and_deploy.yml
continuous_integration/: environment-3.8.yml  environment.yml
continuous_integration/conda/: build.sh  meta.yaml
docs/: Makefile  conf.py  index.rst
docs/custom_sphinx_extensions/: ops_reference_sphinx_extension.py
docs/dialect/: index.rst  ops.rst  ops_reference.py  ops_reference.rst  ops_table.rst  passes.rst  passes_reference.rst
docs/implementation/: index.rst
docs/installation/: index.rst
docs/tools/: cli.rst  engine.rst  explorer.rst  index.rst
mlir_graphblas/: RandomUtils.cpp  SparseTensorUtils.cpp  SparseUtils.cpp  __init__.py  _version.py  algo_utils.py  algorithms.py  cli.py  engine.py  explorer.py  functions.py  mlir_builder.py  ops.py  random_utils.pyx  sparse_utils.cpp  sparse_utils.html  sparse_utils.pyx  types.py  wrap.pyx
mlir_graphblas/src/: CMakeLists.txt  README.md  build.py  triangle_count.mlir
mlir_graphblas/src/graphblas-opt/: CMakeLists.txt  graphblas-opt.cpp
mlir_graphblas/src/lowering-test/: CMakeLists.txt  MatrixApply.cpp  MatrixMultiply.cpp  MatrixReduceToScalar.cpp  MatrixSelect.cpp  Transpose.cpp  lowering.cpp  lowering.h  util.cpp
mlir_graphblas/tests/: __main__.py  jit_engine_test_utils.py  test_algo_utils.py  test_algorithms.py  test_io.py  (+10 more)
(+198 files in other folders)
